# ticktr

./: Anchor.toml  README.md
programs/ticktr/: Cargo.toml
programs/ticktr/src/: lib.rs
tests/: start.sh  ticktr.ts
